--- a/provider-privilege-service/src/main/resources/application.yml
+++ b/provider-privilege-service/src/main/resources/application.yml
@@ -6,11 +6,11 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://localhost:3306/ben?useUnicode=true&useSSL=false&characterEncoding=utf8
+    url: jdbc:mysql://mysql.appx.host:3306/ben?useUnicode=true&useSSL=false&characterEncoding=utf8
 dubbo:
   registry:
     id: main-registry
-    address: zookeeper://192.168.78.10:2181
+    address: zookeeper://zookeeper.appx.host:2181
   application:
     id: provider-privilege-service
     name: provider-privilege-service
@@ -18,7 +18,7 @@ dubbo:
     id: dubbo
     name: dubbo
     host: localhost
-    port: 20883
+    port: 22203
   scan:
     base-packages: com.spawpaw.ben.provider.service
 mybatis:
