--- a/cloud-gateway-zuul/src/main/resources/application.yml
+++ b/cloud-gateway-zuul/src/main/resources/application.yml
@@ -12,7 +12,7 @@ zuul:
   routes:
     user-service:
       path: /**
-      serviceId: provider-user-service
+      serviceId: service-upms
 server:
   port: 8080
 spring:
